--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-env:
-  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-  IMAGE_NAME: registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
 jobs:
   cd:
@@ -15,10 +12,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Heroku login
-        run: heroku container:login
+        run: |
+          curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
+          heroku container:login
       - name: Build docker image
-        run: docker build -t ${{ env.IMAGE_NAME }} .
+        run: docker build -t ${{ secrets.HEROKU_APP_NAME }}:${{github.run_id}} .
       - name: Deploy docker image
-        run: docker push ${{ env.IMAGE_NAME }}
+        run: |
+          docker tag ${{ secrets.HEROKU_APP_NAME }}:${{github.run_id}} registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+          docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
       - name: Release
         run: heroku container:release web -a ${{ secrets.HEROKU_APP_NAME }}
