--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,21 +5,26 @@ on:
     branches:
       - main
 
+env:
+  HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+  DOCKER_TAG: ${{ secrets.HEROKU_APP_NAME }}:${{github.run_id}}
+  HEROKU_DOCKER_TAG: registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+
 jobs:
   cd:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Heroku login
+      - name: Heroku install and login
         run: |
           curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
           heroku container:login
       - name: Build docker image
-        run: docker build -t ${{ secrets.HEROKU_APP_NAME }}:${{github.run_id}} .
+        run: docker build -t ${{ env.DOCKER_TAG }} .
       - name: Deploy docker image
         run: |
-          docker tag ${{ secrets.HEROKU_APP_NAME }}:${{github.run_id}} registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
-          docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+          docker tag ${{ env.DOCKER_TAG }} ${{ env.HEROKU_DOCKER_TAG }} 
+          docker push ${{ env.HEROKU_DOCKER_TAG }}
       - name: Release
         run: heroku container:release web -a ${{ secrets.HEROKU_APP_NAME }}
